k8s/overlays/prod/ssr-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssr
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ssr.meyacrew.com
    secretName: ssr-meyacrew-com-tls
  rules:
  - host: ssr.meyacrew.com # Production hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssr
            port:
              number: 80
